media/css/firefox/os/firefox-os.less
/* ... */
#mission {
  color: @textColorTertiary;
  position: relative;
  background: #d3dae2;
  z-index: 101;
  .open-sans-light();
}

#transform-the-future {
  padding: (@baseLine * 2) 0;
  text-align: center;   
  h2, p {
    width: 70%;
    margin: 0 auto;
  }
  p {
    margin: @baseLine auto;
  }
}

#our-community {
  position: relative;
  overflow: hidden;
  section {
    float: right;
    width: 460px;
  }
  .bubbles {
    float: left;
    width: 452px;
    height: 446px;
    background: transparent url('/media/img/firefox/os/bubbles.png') no-repeat top left;
  }
}

#best-of-the-web {
  position: relative;
  margin: 0 auto;
  .content {
    float: left;
    width: 460px;
    margin-top: 60px;
  }
  img {
    float: right;
    max-width: 100%;
    height: auto;
    margin-top: -140px;
  }
}

#useful-links {
  overflow: visible;
  padding: (@baseLine * 4) 0;
  .column {
    width: (@widthDesktop - (@gridGutterWidth * 2))/2;
    float: left;
  }
  .column-first {
    width: ((@widthDesktop - (@gridGutterWidth * 2))/2) - @baseLine;
    margin-right: @baseLine;
  }
  h3 {
    font-size: 32px;
    letter-spacing: -1px;
    padding-left: 5px;
  }
  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
  }
  ul li {
    float: left;
    width: 430px;
    font-size: 22px;
    letter-spacing: -1px;
    .open-sans-light();
    padding: @gridGutterWidth;
    background: #fff;
    margin: 5px;
    a {
      display: block;
      font-size: 16px;
      color: #149fd3;
      letter-spacing: 0px;
      &:after {
        content: "\00A0\00BB";
      }
    }
  }
}

.modal-content {
  width: 960px;
  margin: 0 auto;
  header {
    display: none;
  }
  h2 {
    font-size: 26px;
    color: #666;
    letter-spacing: -1px;
    padding-bottom: (@baseLine * 2);
    margin-bottom: @baseLine;
  }
}

#provider-text-multi, #provider-text-single { display: none; }

#email-form-content {
  #footer-email-thanks {
    display: none;
  }
  h3 {
    font-size: 26px;
    line-height: 32px;
    text-shadow: none;
  }
}

#footer-email-form {
  width: @widthDesktop - (@gridGutterWidth * 2);
  margin: 0 auto;
  background: transparent;
  border: 0;
  box-shadow: none;
  a {
    color: #47b8e4;
    text-decoration: underline;
  }
}

.js {
  // newsletter to slide in via CTA button
  #signup-toggle-icon {
    position: fixed;
    top: (@baseLine + 80); // @baseLine below height of masthead
    right: @baseLine;
    z-index: 1000;
    width: 28px;
    height: 28px;
    background: url(/media/img/firefox/os/signup-slide-toggle.png) left top no-repeat;
    text-indent: 100%;
    white-space: nowrap;
    overflow: hidden;
    @transition: right, box-shadow linear 0.25s;
    .transition(@transition);
    &.form-open {
      right: 300px;
      background-position: left -28px;
    }
  }

  #signup-toggle-icon:hover, #signup-toggle-icon:focus {
    outline: none;
    .transition(box-shadow .5s linear);
    .box-shadow(0 0 20px 0px rgb(255,255,255));
  }

  #email-form-wrapper {
    display: none;
    width: 100%;
  }

  #footer-email-form {
    width: 100%;
    #form-details, .form-details {
      display: block;
    }
    h3 {
      margin: 0 10px 10px 10px;
    }
    .error {
      border: 1px solid rgb(175,50,50);
    }
  }

  // modal to show via CTA button
  #get-phone-wrapper {
    display: none;
  }

  .modal-content {
    width: 990px;
    background: #fff;
    @shadow: 0 1px 22px rgba(0, 0, 0, 0.8);
    .box-shadow(@shadow);
    
    header {
      display: block;
      background: #0095dd;
      padding: @baseLine (@baseLine * 1.5) (@baseLine * 0.5);
      img {
        float: left;
      }
    }

    h2 {
      background: url('/media/img/firefox/os/purchase-hr.png') center bottom no-repeat;
    }

    .content {
      padding: (@baseLine * 1.5) (@baseLine * 1.5);
      color: #666;
      .open-sans-light;
    }

    #provider-text-nojs { display: none; }

    #provider-text-single { display: block; }

    .close {
      float: right;
      background: url(/media/img/firefox/os/closex-purchase.png) right top no-repeat;
      height: 32px;
      padding-right: 39px;
      margin-top: 4px;
      overflow: hidden;
      border: 0;
      cursor: pointer;
      .close-text {
        color: #fff;
        font-size: 16px;
        .open-sans-light;
        line-height: 14px;
      }

      &:hover {
        background-position: right -32px;
      }
    }
  }

  #get-phone {
    .content {
      text-align: center;
      font-size: 20px;
      letter-spacing: -1px;
    }
    #provider-links {
      vertical-align: middle;
      a {
        display: inline-block;
        vertical-align: middle;
        padding: 60px (@baseLine * 2) 0 (@baseLine * 2);
        font-size: 17px;
        &:after {
          content: " \00BB";
        }
      }
      .movistar {
        width: 177px;
        height: 47px;
        background: transparent url('/media/img/firefox/os/logo/movistar.jpg') top center no-repeat; 
      }
      .t-mobile {
        width: 200px;
        height: 47px;
        background: transparent url('/media/img/firefox/os/logo/t-mobile.jpg') top center no-repeat;         
      }
      .last {
        border-left: 1px dashed #666;
      }
    }
  }
}

#colophon {
  margin: 0;
  z-index: 101;
}

// modal
body.noscroll {
  overflow: hidden;
}

#modal {
  background: #354b5d;
  background: rgba(53, 75, 93, 0.8);
  width: 100%;
  height: 101%;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 9999999;
  overflow: auto;
  display: none;

  header {
    height: 48px;
  }
}

#modal .inner {
  margin: 40px auto;
  padding: 0 20px;
  color: #f3f3f3;
}

#modal-close {
  display: none;
}
/* ... */

